# backend-service

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  fly.toml
.github/: CODEOWNERS  branch-protection-checklist.md  copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  deploy-fly.yml
backend-service/: .env.example  .gitignore  .release-please-config.json  Cargo.toml  Dockerfile  README.md
backend-service/.github/: branch-protection-checklist.md  copilot-instructions.md
backend-service/.github/workflows/: ci.yml  release-please.yml
backend-service/migrations/: 0001_create_tasks.sql
backend-service/src/: lib.rs  main.rs
backend-service/src/lib/: app_state.rs  auth.rs  handlers.rs  models.rs  router.rs  validation.rs
backend-service/tests/: api_tasks.rs
load/: k6_tasks.js
migrations/: 0002_add_task_difficulty.sql  0003_add_task_goal.sql  0004_create_api_request_logs.sql  0005_expand_task_difficulty_to_six.sql  0006_add_task_status.sql  0007_add_task_source.sql  0008_add_task_due_date.sql  0009_create_task_comments.sql  0010_add_task_labels.sql
scripts/: backup-sqlite.sh
src/: lib.rs  main.rs
src/lib/: app_state.rs  auth.rs  handlers.rs  models.rs  rate_limit.rs  router.rs  validation.rs
src/lib/handlers/: admin.rs  comments.rs  health.rs  info.rs  mod.rs  plan_clear.rs  planner.rs  shared.rs  tasks.rs  tasks_support.rs
tests/: api_tasks.rs
